# ferris

./: Cargo.toml  Makefile  README.md  run.sh  start.sh
src/: apps.rs  bar.rs  errors.rs  keys.rs  lib.rs  main.rs  menu.rs  util.rs
src/bar/: config.rs  mod.rs
src/bar/widgets/: battery.rs  brackets.rs  mod.rs  time_date.rs  volume.rs  wifi.rs
src/utils/: dmenu.rs  helpers.rs  mod.rs  resources.rs
src/widgets/: battery.rs  brackets.rs  mod.rs  parantheses.rs  time_date.rs  volume.rs  wifi.rs
